# advent_of_code_2021

./: .flake8  .gitignore  LICENSE  README.md  justfile  pyproject.toml
aoc/day1/: day1.py
scripts/: new.py  run.py
src/: __init__.py
src/day01/: day01.py
src/day02/: day02.py
src/day03/: day03.py
src/day04/: day04.py
src/day05/: day05.py
src/day06/: day06.py  day06_lru.py
src/day07/: day07.py
src/day08/: day08.py
src/day09/: day09.py
src/day1/: day1.py
src/day10/: day10.py
src/day11/: day11.py
src/day12/: day12.py
src/day13/: day13.py
src/day14/: day14.py
src/day15/: day15.py
src/day16/: day16.py
tests/: test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py  test_day1.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day15.py  test_day16.py
